--- a/apache/conf/extra/httpd-xampp.conf
+++ b/apache/conf/extra/httpd-xampp.conf
@@ -93,6 +93,17 @@ ScriptAlias /php-cgi/ "C:/xampp/php/"
         Require local
         ErrorDocument 403 /error/XAMPP_FORBIDDEN.html.var
     </Directory>
+	
+	    
+	Alias /phpmyadmin "C:/xampp/phpMyAdmin/"
+    <Directory "C:/xampp/phpMyAdmin">
+        AllowOverride AuthConfig
+        Require all granted
+		#Require ip 0.0.0.0/0.0.0.0
+	    ErrorDocument 403 /error/XAMPP_FORBIDDEN.html.var
+    </Directory>
+
+
 
     Alias /webalizer "C:/xampp/webalizer/"
     <Directory "C:/xampp/webalizer">
@@ -131,6 +142,13 @@ ScriptAlias /php-cgi/ "C:/xampp/php/"
     ServerName bcit.stevenover.land
 	ServerAlias bcit.stevenover.land
 </VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot C:/xampp/htdocs/dvwa
+    ServerName dvwa.stevenover.land
+	ServerAlias dvwa.stevenover.land
+</VirtualHost>
+
 
 <VirtualHost *:80>
     DocumentRoot C:/xampp/htdocs/wiki/
